--- a/itemTemplate/samples/index.html
+++ b/itemTemplate/samples/index.html
@@ -2,7 +2,11 @@
 <head>
 	<title>Item Template Sample</title>
 </head>
+{{1+1}}
 <body>
-	
+	<script type="text/javascript" src="../scripts/jquery-2.0.3.min.js"></script>
+	<script type="text/javascript" src="../scripts/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../scripts/angular.min.js"></script>
+	<script type="text/javascript" src="../src/radical.itemTemplate.js"></script>
 </body>
 </html>
