trying to understand how base / url affects AngularJS $http, currently the sample is broken

--- a/itemTemplate/samples/index.html
+++ b/itemTemplate/samples/index.html
@@ -1,6 +1,9 @@
 <html data-ng-app="sample">
 <head>
 	<title>Item Template Sample</title>
+	<script>
+        document.write('<base href="' + document.location + '" />');
+    </script>
 </head>
 <body>
 <div data-ng-controller="sampleController">
