--- a/itemTemplate/samples/index.html
+++ b/itemTemplate/samples/index.html
@@ -4,6 +4,8 @@
 	<script>
         document.write('<base href="' + document.location + '" />');
     </script>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/bootstrap-theme.min.css">
 </head>
 <body>
 <div data-ng-controller="sampleController">
