reverting back while not correctly handling the missing context

--- a/itemTemplate/samples/index.html
+++ b/itemTemplate/samples/index.html
@@ -22,7 +22,7 @@
 </ul>
 
 <div>
-  <item-template ng-model="selection" 
+  <item-template template-model="selection" 
                  item-template-settings="{ 
                     templateNameSuffix: '-editor', 
                     handleUndefinedModel: true, 
