minor sample fix

--- a/typeahead/samples/index.html
+++ b/typeahead/samples/index.html
@@ -33,7 +33,7 @@
           </div>
       </typeahead>
   </div>
-  <div>{{selected}}</div>
+  <div>Current selection: {{selected}}</div>
   
   <hr />
   <h3>Typeahead w/ support for tag(s)</h3>
